<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mycompany</groupId>
    <artifactId>TFG</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>23</maven.compiler.release>
        <exec.mainClass>com.mycompany.tfg.TFG</exec.mainClass>
    </properties>
    
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*</include>                    
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
   <dependencies>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.33</version> 
        </dependency>
        <dependency>
            <groupId>jaspersoft</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version> 
        </dependency>
        <dependency>
            <groupId>jaspersoft</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.2</version> 
        </dependency>
        <dependency>
            <groupId>jaspersoft</groupId>
            <artifactId>jasperreports</artifactId>
            <version>7.0.1</version> 
        </dependency>
        <dependency>
            <groupId>jaspersoft</groupId>
            <artifactId>jasperreports-charts</artifactId>
            <version>7.0.1</version> 
        </dependency>
        <dependency>
            <groupId>jaspersoft</groupId>
            <artifactId>jasperreports-data-adapters</artifactId>
            <version>7.0.1</version> 
        </dependency>
        <dependency>
            <groupId>jaspersoft</groupId>
            <artifactId>jasperreports-excel-poi</artifactId>
            <version>7.0.1</version> 
        </dependency>
        <dependency>
            <groupId>jaspersoft</groupId>
            <artifactId>jasperreports-pdf</artifactId>
            <version>7.0.1</version> 
        </dependency>
        <dependency>
            <groupId>jaspersoft</groupId>
            <artifactId>jfreechart</artifactId>
            <version>1.5.3</version> 
        </dependency>
    </dependencies>
</project>